# kfl_deepfake

./: README.md  pyproject.toml  requirements.txt  train_log.csv  train_log.txt
notebooks/: submit.ipynb
src/: config.py  dali_dataset.py  dali_train.py  get_fakes_ratio.py  prepare_data.py  train.py  utils.py  validate.py
src/stages/: get_fakes_ratio.py  prepare_data.py  train.py
