[tool.poetry]
name = "kgl_deepfake"
version = "0.1.0"
description = "Kaggle Deepfake Detection Challenge solution"
authors = ["sashulyak <sashulya.konshin@gmail.com>"]
license = "MIT"


[[tool.poetry.source]]
name = "ivi_cv-local"
url = "https://developer.download.nvidia.com/compute/redist/cuda/10.0"


[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"
opencv-python = "^4.2.0"
scikit-learn = "^0.23.1"
scipy = "^1.4.1"
tensorflow = "^2.2.0"
nvidia-dali = "^0.21.0"
nvidia-dali-tf-plugin = "^0.21.0"
mtcnn = {git = "https://github.com/sashulyak/mtcnn.git"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
